adjusted the paddings

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
            </div>    
                 <div class="button4">sign up</div>
         </div>
+        <div></div>
     </div>
 <!------- /* <-----------------------------------------------end of fourth section> */ -->
 <!------- /* <-----------------------------------------------start of footer> */ -->
